Clean legacy build warnings and unused server code
Server:
- Removed unused legacy MysqlManager implementation and its deprecated API warning.
- Added explicit generic typing to legacy world map collections in C, I and VirtualWorld.
- Removed unchecked raw ArrayList and Map operations from collision/world map loading.
- Removed unnecessary forced System.gc() and System.runFinalization() calls from the server debug cycle.
- Updated the server builder to enable unchecked compiler diagnostics during cleanup.
- Server now builds cleanly without compiler warnings and continues to start successfully.

Client:
- Corrected the legacy client build command so the sign package is compiled alongside the main client sources.
- Enabled deprecation and unchecked compiler diagnostics in the client builder.
- Replaced deprecated URL constructor usage with URI-based URL creation.
- Added proper generic typing to the reflection Class reference used by the URL launcher.
- Replaced deprecated Runtime.exec(String) usage with the argument-array overload.
- Updated signlink URL resolution without changing its legacy applet behaviour.
- Left the remaining Applet/AppletContext warnings intentionally untouched because the bundled client still uses the original 317 applet architecture.

These changes are intended as behaviour-preserving build and code hygiene improvements before beginning the larger Project Insanity server stripping/refactor."