@@ -5,14 +5,12 @@
 import java.applet.AppletContext;
 import java.awt.*;
 import java.io.*;
-import java.math.BigInteger;
 import java.net.*;
-import java.util.zip.CRC32;
 import java.lang.reflect.Method;
 import sign.signlink;
 import javax.swing.*;
 
-public class client extends RSApplet {
+public class Client extends RSApplet {
 	
 
 	public int MapX, MapY;
@@ -941,7 +939,7 @@ public class client extends RSApplet {
 		System.out.println(s);
 		try
 		{
-			getAppletContext().showDocument(new URL(getCodeBase(), "loaderror_" + s + ".html"));
+			getAppletContext().showDocument(getCodeBase().toURI().resolve("loaderror_" + s + ".html").toURL());
 		}
 		catch(Exception exception)
 		{
@@ -7743,7 +7741,7 @@ public class client extends RSApplet {
 
 	public URL getCodeBase() {		
 		try {
-			return new URL(server +":" + (80 + portOff));
+			return new URI(server + ":" + (80 + portOff)).toURL();
 		} catch(Exception _ex) {
 		}
 		return null;
@@ -12049,7 +12047,7 @@ public class client extends RSApplet {
 		fullscreenInterfaceID = -1;
 	}
 
-	public client() {
+	public Client() {
 		fullscreenInterfaceID = -1;
 		chatRights = new int[500];
 		chatTypeView = 0;
@@ -12702,12 +12700,16 @@ public class client extends RSApplet {
 	public void launchURL(String url) { 
 		String osName = System.getProperty("os.name"); 
 		try { 
-			if (osName.startsWith("Mac OS")) { 
-				Class fileMgr = Class.forName("com.apple.eio.FileManager"); 
-				Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[] {String.class}); 
+			if (osName.startsWith("Mac OS")) {
+				Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
+				Method openURL = fileMgr.getDeclaredMethod("openURL", String.class);
 				openURL.invoke(null, new Object[] {url});
-			} else if (osName.startsWith("Windows")) 
-				Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url); 
+			} else if (osName.startsWith("Windows"))
+				Runtime.getRuntime().exec(new String[] {
+						"rundll32",
+						"url.dll,FileProtocolHandler",
+						url
+				});
 			else { //assume Unix or Linux
 				String[] browsers = { "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape", "safari" }; 
 			String browser = null; 
